--- a/debugging/css/style.css
+++ b/debugging/css/style.css
@@ -2,10 +2,11 @@ body{
   /* make all text courier, set margin and padding to 0 */
   font-family: “Courier”, monospace;
   margin: 0
-  padding: 0;
+  padding: 0px;
 }
 h1{
   /* make your headers #128ded color and bold */
+  font-size: 34px;
   color: #128ded;
   font-weight: bold;
 }
@@ -31,12 +32,14 @@ ul{
   /* make bullet points red squares */
   list-style: square;
   color: red;
+  padding-left: 20px;
 }
 img{
   /* make the image 300px wide and 220px high, 10px of padding, and a 3px dashed border in the color of your choice */
   width: 300px;
   height: 220px;
   border: 3px dashed pink;
+  padding: 10px;
 }
 
 footer{
